// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesyncv2;

option java_multiple_files = true;

message CgInstanceSyncResponse {
  string perpetual_task_id = 1;
  string account_id = 2;
  repeated InstanceSyncData instance_data = 3;
  string execution_status = 4;
  string error_message = 5;
}

message InstanceSyncData {
  string task_details_id = 1;
  repeated bytes instance_data = 2;
}
